Add some changes on exercise set 2

--- a/Exercise Sets/Exercise Set 2/about.html
+++ b/Exercise Sets/Exercise Set 2/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flex</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -12,23 +12,23 @@
 <body>
     <div class="container">
         <div id="flex-container" class="flex-container">
-            <div class="item item-1">
+            <div class="item">
                 <i class='bx bx-child'></i>
                 <p><b>Basic Info</b></p>
                 <p><b>Name: </b>James Michael D. Magnaye</p>
                 <p><b>Date of Birth: </b>09/30/2003</p>
             </div>
-            <div class="item item-2">
-                <i class='bx bxs-heart'></i>
-                <p><b>Personal Info</b></p>
-                <p><b>Hobbies: </b>Singing, Dancing</p>
-                <p><b>Random Fact: </b>Gusto ko po maging Bisaya</p>
-            </div>
-            <div class="item item-3">
+            <div class="item">
                 <i class='bx bxs-envelope'></i>
                 <p><b>Contacts</b></p>
                 <p><b>GitHub: </b>@ratatatatcode</p>
                 <p><b>Email: </b>22-02172@g.batstate-u.edu.ph</p>
+            </div>
+            <div class="item">
+                <i class='bx bxs-heart'></i>
+                <p><b>Personal Info</b></p>
+                <p><b>Hobbies: </b>Singing, Dancing</p>
+                <p><b>Random Fact: </b>Gusto ko po maging Bisaya</p>
             </div>
         </div>
     </div>
