Adjust css for Laboratory Activity 3

--- a/Laboratory Activities/Laboratory Activity 3 11-18-2024/index.html
+++ b/Laboratory Activities/Laboratory Activity 3 11-18-2024/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section>
-        <header>
+        <header style="text-align: center;">
             <h1>Word and Sentence Counter</h1>
             <textarea id="textInput" placeholder="Enter your text here..."></textarea>
         </header>
