--- a/Laboratory Activities/Laboratory Activity 4 11-28-2024/index.html
+++ b/Laboratory Activities/Laboratory Activity 4 11-28-2024/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-    <div class="container">
+    <section>
+        <header>
+            <h1>Hello, this is my personal info.</h1></header>
+    </section>
+    <section class="container">
         <div id="flex-container" class="flex-container">
             <div class="item">
                 <i class='bx bx-child'></i>
@@ -31,7 +35,7 @@
                 <p><b>Random Fact: </b>Gusto ko po maging Bisaya</p>
             </div>
         </div>
-    </div>
+    </section>
 </body>
 
 </html>
