--- a/Laboratory Activities/Laboratory Activity 4 11-28-2024/index.html
+++ b/Laboratory Activities/Laboratory Activity 4 11-28-2024/index.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
+    <div id="particles-js" class="particles"></div>
+
     <section>
         <header>
-            <h1>Hello, this is my personal info.</h1></header>
+            <h1 style="color: #181C14">About Me</h1>
+        </header>
     </section>
     <section class="container">
         <div id="flex-container" class="flex-container">
@@ -36,6 +39,7 @@
             </div>
         </div>
     </section>
+    
+    <script src="script.js"></script>
 </body>
-
 </html>
